--- a/homework8/build.gradle
+++ b/homework8/build.gradle
@@ -16,6 +16,8 @@ repositories {
 }
 
 dependencies {
+	implementation project(':common-logging-starter')
+	implementation project(':common-performance-starter')
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -26,6 +28,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.0.3'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+//	implementation 'ch.qos.logback:logback-classic'
 }
 
 tasks.named('test') {
