Add preview version. Docker Container, two profiles add(prod and dev)

--- a/homework9/settings.gradle
+++ b/homework9/settings.gradle
@@ -5,4 +5,4 @@ includeBuild 'cart-service'
 includeBuild 'product-service'
 includeBuild 'review-service'
 includeBuild 'api-gateway'
-
+includeBuild 'store-utils'
