--- a/homework9/api-gateway/src/main/resources/application.yaml
+++ b/homework9/api-gateway/src/main/resources/application.yaml
@@ -1,33 +1,3 @@
-server:
-  port: 8765
-eureka:
-  #  instance:
-  #    hostname: localhost
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
-
 spring:
-  application:
-    name: api-gateway
-  cloud:
-    gateway:
-      discovery:
-        locator:
-          enabled: true
-          lower-case-service-id: true
-      routes:
-        - id: cart
-          uri: lb://cart-service
-          predicates:
-            Path=/api/v1/carts/**
-
-        - id: product
-          uri: lb://product-service
-          predicates:
-            Path=/api/v1/products/**
-
-        - id: review
-          uri: lb://review-service
-          predicates:
-            Path=/api/v1/reviews/**
+  profiles:
+    active: prod
