--- a/homework9/review-service/src/main/resources/application.yaml
+++ b/homework9/review-service/src/main/resources/application.yaml
@@ -1,12 +1,3 @@
-server:
-  port: 0
-eureka:
-  #  instance:
-  #    hostname: localhost
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
-
 spring:
-  application:
-    name: review-service
+  profiles:
+    active: prod
