--- a/homework9/cart-service/src/main/resources/application-prod.yaml
+++ b/homework9/cart-service/src/main/resources/application-prod.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 0
+  port: 9000
 eureka:
   #  instance:
   #    hostname: localhost
@@ -25,3 +25,28 @@ spring:
   jackson:
     serialization:
       FAIL_ON_EMPTY_BEANS: false
+
+  cloud:
+    openfeign:
+      client:
+        config:
+          product:
+            url: http://172.20.0.6:8765/product-service/api/v1/products
+
+idev:
+  openapi:
+    dev-url: http://172.20.0.5:9000
+    prod-url: https://idev-api.com
+
+springdoc:
+  swagger-ui:
+    path: /cart-service/idev-documentation
+    tryItOutEnabled: true
+    operationsSorter: method
+    tagsSorter: alpha
+    filter: true
+  #    enabled: false
+  api-docs:
+    path: /cart-service/idev-api-docs
+  #    enabled: false
+  packages-to-scan: ru.gb.homework9.cartservice
