--- a/homework9/settings.gradle
+++ b/homework9/settings.gradle
@@ -6,3 +6,4 @@ includeBuild 'product-service'
 includeBuild 'review-service'
 includeBuild 'api-gateway'
 includeBuild 'store-utils'
+includeBuild 'store-entity'
