--- a/homework9/api-gateway/src/main/resources/application-dev.yaml
+++ b/homework9/api-gateway/src/main/resources/application-dev.yaml
@@ -7,27 +7,9 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka
 
-spring:
-  application:
-    name: api-gateway
-  cloud:
-    gateway:
-      discovery:
-        locator:
-          enabled: true
-          lower-case-service-id: true
-      routes:
-        - id: cart
-          uri: lb://cart-service
-          predicates:
-            Path=/api/v1/carts/**
-
-        - id: product
-          uri: lb://product-service
-          predicates:
-            Path=/api/v1/products/**
-
-        - id: review
-          uri: lb://review-service
-          predicates:
-            Path=/api/v1/reviews/**
+logging:
+  level:
+    root: INFO
+  file:
+    name: api-gateway.log
+    path: /
